# internal/routers/api/v1/article.go
@@ -1,6 +1,13 @@
 package v1
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/geekr-dev/go-blog-app/global"
+	"github.com/geekr-dev/go-blog-app/internal/service"
+	"github.com/geekr-dev/go-blog-app/pkg/app"
+	"github.com/geekr-dev/go-blog-app/pkg/convert"
+	"github.com/geekr-dev/go-blog-app/pkg/errcode"
+	"github.com/gin-gonic/gin"
+)
 
 type Article struct {
 }
@@ -9,8 +16,160 @@ func NewArticle() Article {
 	return Article{}
 }
 
-func (a Article) Get(c *gin.Context)    {}
-func (a Article) List(c *gin.Context)   {}
-func (a Article) Create(c *gin.Context) {}
-func (a Article) Delete(c *gin.Context) {}
-func (a Article) Update(c *gin.Context) {}
+// @Summary 获取文章详情
+// @Produce json
+// @Param id path int true "文章ID"
+// @Param state query int false "状态" Enums(0, 1) default(1)
+// @Success 200 {object} model.Article "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
+// @Router /api/v1/articles/{id} [get]
+func (a Article) Get(c *gin.Context) {
+	param := service.ArticleRequest{ID: convert.StrTo(c.Param("id")).MustUint32()}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValidate(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValidate errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	article, err := svc.GetArticle(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.GetArticle err: %v", err)
+		response.ToErrorResponse(errcode.ErrorGetArticleFail)
+		return
+	}
+
+	response.ToResponse(article)
+}
+
+// @Summary 获取文章列表
+// @Produce json
+// @Param tag_id query int false "标签ID"
+// @Param state query int false "状态" Enums(0, 1) default(1)
+// @Param page query int false "页码"
+// @Param page_size query int false "每页数量"
+// @Success 200 {object} model.ArticleSwagger "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
+// @Router /api/v1/articles [get]
+func (a Article) List(c *gin.Context) {
+	param := service.ArticleListRequest{}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValidate(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValidate errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	pager := app.Pager{Page: app.GetPage(c), PageSize: app.GetPageSize(c)}
+	articles, totalRows, err := svc.GetArticleList(&param, &pager)
+	if err != nil {
+		global.Logger.Errorf("svc.GetArticleList err: %v", err)
+		response.ToErrorResponse(errcode.ErrorGetArticlesFail)
+		return
+	}
+
+	response.ToResponseList(articles, int(totalRows))
+}
+
+// @Summary 新增文章
+// @Produce json
+// @Param title body string true "文章标题" minlength(3) maxlength(100)
+// @Param desc body string false "文章摘要" minlength(2) maxlength(255)
+// @Param content body string true "文章内容"
+// @Param feature_image body string true "封面图片" maxlength(255)
+// @Param state body int false "状态" Enums(0, 1) default(1)
+// @Param tag_id body int true "标签ID"
+// @Param created_by body string true "作者" minlength(3) maxlength(100)
+// @Success 200 {object} model.Article "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
+// @Router /api/v1/articles [post]
+func (a Article) Create(c *gin.Context) {
+	param := service.CreateArticleRequest{}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValidate(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValidate errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.CreateArticle(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.CreateArticle err: %v", err)
+		response.ToErrorResponse(errcode.ErrorCreateArticleFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+}
+
+// @Summary 更新文章
+// @Produce json
+// @Param id path int true "文章ID"
+// @Param title body string false "文章标题" minlength(3) maxlength(100)
+// @Param desc body string false "文章摘要" minlength(2) maxlength(255)
+// @Param content body string false "文章内容"
+// @Param feature_image body string false "封面图片" maxlength(255)
+// @Param state body int false "状态" Enums(0, 1) default(1)
+// @Param tag_id body int false "标签ID"
+// @Param updated_by body string true "编辑" minlength(3) maxlength(100)
+// @Success 200 {object} model.Article "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
+// @Router /api/v1/articles/{id} [put]
+func (a Article) Update(c *gin.Context) {
+	param := service.UpdateArticleRequest{ID: convert.StrTo(c.Param("id")).MustUint32()}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValidate(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValidate errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.UpdateArticle(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.UpdateArticle err: %v", err)
+		response.ToErrorResponse(errcode.ErrorUpdateArticleFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+}
+
+// @Summary 删除文章
+// @Produce json
+// @Param id path int true "文章ID"
+// @Success 200 {object} model.Article "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
+// @Router /api/v1/articles/{id} [delete]
+func (a Article) Delete(c *gin.Context) {
+	param := service.DeleteArticleRequest{ID: convert.StrTo(c.Param("id")).MustUint32()}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValidate(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValidate errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.DeleteArticle(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.DeleteArticle err: %v", err)
+		response.ToErrorResponse(errcode.ErrorDeleteArticleFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+}
